--- a/documentation/CameraAveragingLog.tex
+++ b/documentation/CameraAveragingLog.tex
@@ -11,6 +11,8 @@
 Git is used with GitHub.
 This section includes some basic tips/reminders.
 \begin{itemize}
+\item ~/organize/projects/ImageAveraging
 \item \verb|Git status|
+\item \verb|git add documentation|
 \end{itemize}
 \end{document}
