working on docs

--- a/documentation/CameraAveragingLog.tex
+++ b/documentation/CameraAveragingLog.tex
@@ -14,5 +14,10 @@ This section includes some basic tips/reminders.
 \item ~/organize/projects/ImageAveraging
 \item \verb|Git status|
 \item \verb|git add documentation|
+\item \verb|git commit -m "tekst"|
+\item \verb|git push|
 \end{itemize}
+when a file was added before you made a gitignore list delete it using \verb|git rm file| then commit then push.
+
+I added custem latex .gitignore file to the docuemntation folder.
 \end{document}
