working on docs

--- a/documentation/CameraAveragingLog.tex
+++ b/documentation/CameraAveragingLog.tex
@@ -19,5 +19,5 @@ This section includes some basic tips/reminders.
 \end{itemize}
 when a file was added before you made a gitignore list delete it using \verb|git rm file| then commit then push.
 
-I added custem latex .gitignore file to the docuemntation folder.
+I added custom latex .gitignore file to the documentation folder.
 \end{document}
