--- a/documentation/CameraAveragingLog.tex
+++ b/documentation/CameraAveragingLog.tex
@@ -20,4 +20,7 @@ This section includes some basic tips/reminders.
 when a file was added before you made a gitignore list delete it using \verb|git rm file| then commit then push.
 
 I added custom latex .gitignore file to the documentation folder.
+
+Convenient:\\
+\verb|git add *pdf *tex &&  git commit -m "working on docs" && git push|
 \end{document}
