--- a/documentation/CameraAveragingLog.tex
+++ b/documentation/CameraAveragingLog.tex
@@ -5,8 +5,20 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 \author{Jeroen Keizer}
+\usepackage{hyperref}
+
 \begin{document}
-\section{Introduction}
+
+\chapter{Introduction}
+empty
+\chapter{Git details}
+Using Github repo:
+\begin{itemize}
+\item \url{https://github.com/PublicVoids/ImageAveraging}
+\item User PublicVoids
+\item ww see keepassx
+\item A project checkout  ~/organize/projects/ImageAveraging/
+\end{itemize}
 \section{GIT}
 Git is used with GitHub.
 This section includes some basic tips/reminders.
@@ -23,4 +35,9 @@ I added custom latex .gitignore file to the documentation folder.
 
 Convenient:\\
 \verb|git add *pdf *tex &&  git commit -m "working on docs" && git push|
+
+
+\chapter{Programming}
+\section{Using camera from python}
+
 \end{document}
