Documentation on prog started

--- a/documentation/CameraAveragingLog.tex
+++ b/documentation/CameraAveragingLog.tex
@@ -39,5 +39,7 @@ Convenient:\\
 
 \chapter{Programming}
 \section{Using camera from python}
+Explanation here
+\href{http://opencv-python-tutroals.readthedocs.org/en/latest/py_tutorials/py_gui/py_video_display/py_video_display.html}{link to opencv}.
 
 \end{document}
